[package]
name = "concourse-gitlab-merge-request-resource"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Shohei Maruyama <cheat.sc.linux@outlook.com>"]

[[bin]]
name = "check"
path = "src/check.rs"

[[bin]]
name = "in"
path = "src/in.rs"

[[bin]]
name = "out"
path = "src/out.rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
git2 = "0.20.2"
gitlab = "0.1801.0"
glob = "0.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
url = "2.5.4"

[dev-dependencies]
rstest = "0.25.0"
